Fixed the footer going on top of the url form on mobile

--- a/tiny0/static/style.css
+++ b/tiny0/static/style.css
@@ -40,6 +40,7 @@ body {
     position: absolute;
     left: 0;
     right: 0;
+    z-index: 100;
     background-color: #2c2c2c;
     border-radius: 8px;
     padding: 30px 0px;
